# Media_Hub

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260629_0001_initial.py  20260714_0002_media_favorites.py  20260717_0003_mteam_traffic_rollups.py  20260722_0004_runtime_schema.py
backend/app/: __init__.py  main.py
backend/app/adapters/: base.py  mock.py
backend/app/adapters/ai/: __init__.py  client.py
backend/app/adapters/mteam/: __init__.py  client.py
backend/app/adapters/qbittorrent/: __init__.py  client.py
backend/app/adapters/tmdb/: __init__.py  client.py
backend/app/adapters/wechat_claw/: __init__.py  (+1 more)
backend/app/api/: deps.py  routes.py
backend/app/auth/: security.py
backend/app/collectors/: __init__.py
backend/app/config/: settings.py
backend/app/db/: migrations.py  session.py
backend/app/diagnostics/: __init__.py  tracing.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: __init__.py
backend/app/services/: crypto.py  integrations.py
backend/app/stats/: __init__.py
backend/app/tasks/: scheduler.py
backend/app/utils/: ids.py  redaction.py  time.py
backend/tests/: test_api.py  test_diagnostics_live.py  test_download_security.py  test_favorites.py  test_media_hub_agent.py  test_migrations.py  test_mteam_traffic.py  test_qb_actions.py  test_qb_task_notifications.py  test_scheduler.py  test_security.py  test_storage.py  test_time.py  test_tmdb_feedback.py  test_wechat_claw_ai.py
(+13 files in other folders)
