[project]
name = "pt-media-hub-backend"
version = "0.1.0"
description = "PT Media Hub FastAPI backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.6",
  "uvicorn[standard]>=0.34.0",
  "sqlalchemy>=2.0.36",
  "alembic>=1.14.0",
  "pydantic-settings>=2.7.0",
  "cryptography>=44.0.0",
  "python-jose[cryptography]>=3.3.0",
  "bcrypt>=4.2.1",
  "apscheduler>=3.11.0"
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.4",
  "httpx>=0.28.1"
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
