[project]
name = "pt-media-hub-backend"
version = "1.0.0"
description = "PT Media Hub FastAPI backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.138.1",
  "uvicorn[standard]==0.49.0",
  "sqlalchemy==2.0.51",
  "alembic==1.18.5",
  "pydantic-settings==2.14.2",
  "cryptography==49.0.0",
  "python-jose[cryptography]==3.5.0",
  "bcrypt==5.0.0",
  "apscheduler==3.11.3",
  "tzdata==2026.2"
]

[project.optional-dependencies]
test = [
  "pytest==9.1.1",
  "httpx==0.28.1"
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
